--- a/Vidly2/Views/Musteriler/Ayrintilar.cshtml
+++ b/Vidly2/Views/Musteriler/Ayrintilar.cshtml
@@ -6,4 +6,11 @@
 }
 
 <h2>@Model.Ad</h2>
+<ul>
+    <li>Membership Type: @Model.UyelikTuru.Ad</li>
+    @if (Model.DogumTarihi.HasValue)
+    {
+        <li>Doğum Günü: @Model.DogumTarihi.Value.ToShortDateString()</li>
+    }
+</ul>
 
