--- a/Vidly2/Views/Musteriler/Index.cshtml
+++ b/Vidly2/Views/Musteriler/Index.cshtml
@@ -15,6 +15,7 @@ else
         <thead>
         <tr>
             <th>Müşteriler</th>
+            <th>Üyelik Türü</th>
             <th>İndirim Oranı</th>
 
         </tr>
@@ -24,6 +25,7 @@ else
         {
             <tr>
                 <td>@Html.ActionLink(@musteri.Ad, "Ayrintilar", "Musteriler", new { id = musteri.Id }, null)</td>
+                <td>@musteri.UyelikTuru.Ad</td>
                 <td>%@musteri.UyelikTuru.IndirimOrani</td>
             </tr>
         }
