Changes up to 46th lecture

--- a/Vidly2/Views/Filmler/Ayrintilar.cshtml
+++ b/Vidly2/Views/Filmler/Ayrintilar.cshtml
@@ -6,10 +6,10 @@
 
 <h2>@Model.Ad</h2>
 <ul>
-    <li>Genre: @Model.Tur.Ad</li>
-    <li>Release Date: @Model.VizyonTarihi.ToLongDateString()</li>
-    <li>Date Added: @Model.EklenmeTarihi.ToLongDateString()</li>
-    <li>Number in Stock: @Model.StoktakiSayi</li>
+    <li>Tür: @Model.Tur.Ad</li>
+    <li>Vizyon Tarihi: @Model.VizyonTarihi.ToLongDateString()</li>
+    <li>Eklenme Tarihi: @Model.EklenmeTarihi.ToLongDateString()</li>
+    <li>Stoktaki Sayı: @Model.StoktakiSayi</li>
 </ul>
 
 
