--- a/Vidly2/Views/Filmler/Index.cshtml
+++ b/Vidly2/Views/Filmler/Index.cshtml
@@ -5,21 +5,27 @@
 }
 
 <h2>Filmler</h2>
+
+<p>
+    @Html.ActionLink("YENİ FİLM", "Yeni", "Filmler", null, new { @class="btn btn-primary" })
+</p>
+
 <table class="table table-bordered table-hover">
-    <thead>
-    <tr>
-        <th>Film</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var film in Model)
-    {
-        <tr>
-            <td>@Html.ActionLink(@film.Ad, "Ayrintilar", "Filmler", new {id = film.Id}, null)</td>
-            <td>@film.Tur.Ad</td>
-        </tr>
-    }
-    </tbody>
-</table>
+        <thead>
+            <tr>
+                <th>Film</th>
+                <th>Tür</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var film in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(@film.Ad, "Duzenle", "Filmler", new { id = film.Id }, null)</td>
+                    <td>@film.Tur.Ad</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
 
