--- a/Vidly2/Views/Musteriler/MusteriForm.cshtml
+++ b/Vidly2/Views/Musteriler/MusteriForm.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Yeni Müşteri</h2>
+<h2>Müşteriyi Düzenle</h2>
 
 @using (Html.BeginForm("Kaydet", "Musteriler"))
 {
