--- a/Vidly2/Views/Musteriler/Liste.cshtml
+++ b/Vidly2/Views/Musteriler/Liste.cshtml
@@ -6,6 +6,10 @@
 
 <h2>Müşteriler</h2>
 
+<p>
+    @Html.ActionLink("YENİ MÜŞTERİ", "Yeni", "Musteriler", null, new { @class="btn btn-primary" })
+</p>
+
 <table id="musteriler" class="table table-bordered table-hover">
     <thead>
     <tr>
