Butun dersler tamamlandi.

--- a/Vidly2/Views/Shared/_NavBar.cshtml
+++ b/Vidly2/Views/Shared/_NavBar.cshtml
@@ -10,6 +10,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Yeni Kira", "Yeni", "Kiralar")</li>
                 <li>@Html.ActionLink("Müşteriler", "Index", "Musteriler")</li>
                 <li>@Html.ActionLink("Filmler", "Index", "Filmler")</li>
             </ul>
